--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,15 +137,23 @@ body {
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
+.group-first-btn {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin: 20px 0 0 0;
+}
+
 .copy-btn {
     display: none;
-    margin: 20px 0 0 0;
     padding: 10px 25px;
     background-color: var(--brandColor);
     border: none;
     border-radius: 5px;
     color: #fafafa;
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .hidden-copy-btn {
@@ -332,9 +340,14 @@ input[type="number"] {
     box-sizing: border-box;
 }
 
+.image-placeholder img {
+    width: 100% !important;
+    height: 100% !important;
+}
+
 .modal-content img {
     border: 0.5px solid var(--borderColor);
-    margin: 10px 0;
+    /* margin: 10px 0; */
 }
 
 .close {
@@ -358,27 +371,33 @@ input[type="number"] {
 }
 
 #unique-placeholder {
-    font-size: 17px;
+    font-size: 13px;
     font-weight: bold;
-    color: #1d1d1d;
+    color: #fafafa;
     text-align: center;
     justify-content: center;
     align-items: center;
     display: flex;
+    background: #002a4b;
+    width: 100%;
+    padding: 6px 0;
 }
 
 #title-placeholder {
     display: none;
-    font-size: 18px;
+    width: 100%;
+    font-size: 13px;
     font-weight: bold;
-    color: var(--brandColor);
+    color: #fafafa;
     text-align: center;
     text-transform: uppercase;
-    background: #eaeceb;
-    padding: 10px 25px 10px 25px;
+    background: #ff7104;
+    border-top: 1px solid #ff6004;
+    padding: 6px 25px 6px 25px;
     box-sizing: border-box;
     border: 0.5px solid var(--borderColor);
-    border-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     justify-content: center;
     align-items: center;
 }
@@ -481,11 +500,33 @@ input[type="number"] {
     margin-bottom: 20px;
 }
 
+#assembleBtn {
+    width: 100%;
+    display: block;
+    height: auto;
+    border-radius: 5px;
+    background-color: var(--brandColor);
+    color: #fafafa;
+    font-size: 14px;
+    font-weight: 400;
+    padding: 10px 0;
+    box-sizing: border-box;
+    border: none;
+}
+
+#default {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .input-group {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    gap: 10px;
+    gap: 5px;
 }
 
 .input-group input {
@@ -607,4 +648,46 @@ input[type="number"] {
 
 .success i {
     color: #00cc66;
+}
+
+.display {
+    display: flex;
+}
+
+.hidden {
+    display: none;
+}
+
+.btn-area {
+    width: 100%;
+    height: auto;
+    display: flex;
+    gap: 25px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #2e2e2e;
+    border-bottom: .5px solid #7c7c7c;
+}
+
+.btn-area .btn {
+    cursor: pointer;
+    padding: 0 0 5px 0;
+    box-sizing: border-box;
+}
+
+.btn-area .focusBtn {
+    border-bottom: 3px solid var(--brandColor);
+}
+
+.display {
+    width: 100%;
+    height: auto;
+    margin: 30px 0 0 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.display span {
+    font-size: 13px;
 }
